# Molt-Guard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.gemini/: settings.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/core_security_middleware_20260209/: metadata.json  plan.md
conductor/archive/molt_guard_20260209/: index.md
conductor/archive/readme_humanization_20260209/: index.md  metadata.json
conductor/tracks/core_security_middleware_20260209/: index.md  plan.md  spec.md
conductor/tracks/molt_guard_20260209/: metadata.json  plan.md  spec.md
conductor/tracks/openai_secure_proxy_20260209/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/readme_humanization_20260209/: plan.md  spec.md
src/: api_types.rs  lib.rs  main.rs  middleware.rs  ollama_client.rs  pii_filter.rs  prompt_guard.rs  secrets_filter.rs  vault.rs
tests/: integration_test.rs
verification/: check_docker_config.sh  check_docker_hardening.sh  check_docker_setup.sh  check_project_setup.sh  check_web_server_deps.sh
