[package]
name = "molt-guard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing-subscriber = "0.3.22"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6.5"
